# prak

./: README.md
4russians/: CMakeLists.txt  generate.cpp  generate.h  main.cpp  matmul_fortran.f90  matmul_fortran.h  matrix.cpp  matrix.h  preprocess.cpp  preprocess.h
